--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "scripts": {
     "prebuild": "rimraf dist/",
     "build": "parcel build src/index.html",
-    "build:dev": "parcel src/index.html"
+    "build:dev": "parcel src/index.html",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "husky": "^8.0.0",
+    "lint-staged": "^13.1.0",
     "parcel": "^2.8.3",
+    "prettier": "^2.8.3",
     "rimraf": "^4.1.1"
   }
 }
